kubernetes/manifests/devbot/devbot-api.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: api
    app.kubernetes.io/name: devbot
  name: api
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/component: api
    app.kubernetes.io/name: devbot
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: api
    app.kubernetes.io/name: devbot
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: api
      app.kubernetes.io/name: devbot
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: api
        app.kubernetes.io/name: devbot
    spec:
      containers:
      - image: europe-docker.pkg.dev/arikkfir/public/devbot/api:2c1ecc2
        name: api
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9000
          name: metrics
          protocol: TCP
        - containerPort: 9001
          name: health
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 50Mi
