kubernetes/manifests/devbot/devbot-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: api
    app.kubernetes.io/name: devbot
  name: api
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/component: api
    app.kubernetes.io/name: devbot
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: portal
    app.kubernetes.io/name: devbot
  name: portal
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/component: portal
    app.kubernetes.io/name: devbot
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: api
    app.kubernetes.io/name: devbot
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: api
      app.kubernetes.io/name: devbot
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: api
        app.kubernetes.io/name: devbot
    spec:
      containers:
      - args:
        - --http-address=:8080
        - --log-caller-info
        - --http-log-response-body
        image: europe-docker.pkg.dev/arikkfir/public/devbot/api:202a8fb@sha256:4809713dae99ab73ab29495b8bdce1ada5cd7197b5eaba38421b972c4b02b769
        name: api
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9000
          name: metrics
          protocol: TCP
        - containerPort: 9001
          name: health
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 50Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: portal
    app.kubernetes.io/name: devbot
  name: portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: portal
      app.kubernetes.io/name: devbot
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: portal
        app.kubernetes.io/name: devbot
    spec:
      containers:
      - env:
        - name: PORT
          value: "80"
        image: europe-docker.pkg.dev/arikkfir/public/devbot/portal:202a8fb@sha256:e531325e50f933f7233afb39caaefdd0d91d6e202e9c0b92f3cf555991c10619
        name: portal
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 50Mi
