kubernetes/manifests/devbot/devbot-portal.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: portal
    app.kubernetes.io/name: devbot
  name: portal
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/component: portal
    app.kubernetes.io/name: devbot
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: portal
    app.kubernetes.io/name: devbot
  name: portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: portal
      app.kubernetes.io/name: devbot
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: portal
        app.kubernetes.io/name: devbot
    spec:
      containers:
      - image: europe-docker.pkg.dev/arikkfir/public/devbot/portal:latest
        name: portal
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 50Mi
