kubernetes/manifests/devbot/devbot-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
spec:
  redirectScheme:
    scheme: https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: devbot-kfirs-com-http
spec:
  entryPoints:
    - web
  routes:
    - match: HostRegexp(`devbot.kfirs.com`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - kind: Service
          name: portal
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-api-prefix
spec:
  stripPrefix:
    prefixes:
      - /api
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: devbot-kfirs-com-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostRegexp(`devbot.kfirs.com`) && Path(`/api`)
      kind: Rule
      middlewares:
        - name: strip-api-prefix
      services:
        - kind: Service
          name: api
          port: 80
    - match: HostRegexp(`devbot.kfirs.com`)
      kind: Rule
      services:
        - kind: Service
          name: portal
          port: 80
  tls:
    secretName: devbot-kfirs-com-tls
